src/objects/CustomObject21__c.object
<CustomObject>
    <fields>
        <fullName>CustomerName__c</fullName>
        <formula>Field3__r.CustomerName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>客户名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>本月眼底检查量（人）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <inlineHelpText>例如201806</inlineHelpText>
        <label>统计年月</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>客户资产</label>
        <referenceTo>CustomerAssets__c</referenceTo>
        <relationshipLabel>欧堡月检查量</relationshipLabel>
        <relationshipName>qO45</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>欧堡月检查量</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>欧堡月检查量编码</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>欧堡月检查量</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>